--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,25 @@ phases:
   pre_build:
     commands:
       - echo "Installing dependencies"
-      - pip install -r Lambda/requirements.txt -t Lamba/
+      - pip install -r Lambda/requirements.txt -t lib
   build:
     commands:
       - echo "Building lambda functions"
-      - cd Lambda && zip -r ../function.zip *
+      - cd lib
+      - zip -r9 ../deployment_package.zip .
+      - zip -r9 ../deployment_package1.zip .
       - cd ..
+      - zip -g deployment_package.zip Search-index.py
+      - zip -g deployment_package1.zip index-photos.py
+  post_build:
+    commands:
+      - echo "Updating lambda Function..."
+      - aws lambda update-function-code --function-name A2_L2 --zip-file fileb://deployment_package.zip
+      - aws lambda update-function-code --function-name A2_L1 --zip-file fileb://deployment_package1.zip
+      - echo "DONE!!"
 artifacts:
   files:
-    - function.zip
+    - deployment_package.zip
+    - deployment_package2.zip
+    
+
