--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,10 +24,10 @@ phases:
 
   post_build:
     commands:
-      - aws s3 cp LF1.zip s3://photos-bucket-ks/LF1_AWS.zip 
-      - aws lambda update-function-code --function-name test-lf1 --s3-bucket photos-bucket-ks --s3-key LF1_AWS.zip
-      - aws s3 cp LF2.zip s3://photos-bucket-ks/LF2_AWS.zip
-      - aws lambda update-function-code --function-name index-photos1 --s3-bucket photos-bucket-ks --s3-key LF2_AWS.zip
+      - aws s3 cp LF1.zip s3://photos-album-6998-2/LF1_AWS.zip 
+      - aws lambda update-function-code --function-name A2_L1 --s3-bucket photos-album-6998-2 --s3-key LF1_AWS.zip
+      - aws s3 cp LF2.zip s3://photos-album-6998-2/LF2_AWS.zip
+      - aws lambda update-function-code --function-name A2_L2 --s3-bucket photos-album-6998-2 --s3-key LF2_AWS.zip
       
     
     
